--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-.wrapper
+.header__wrapper
 {
     width:1600px;
     margin:auto;
@@ -7,6 +7,7 @@ html
 {
     font-family: 'Roboto', sans-serif !important;
     font-size: 16px !important;
+
 }
 .header
 {
@@ -20,7 +21,6 @@ html
 {
     display:flex;
     justify-content: flex-start;
-    align-items: center;
     padding:10px 0;
 }
 .header__link
@@ -31,12 +31,60 @@ html
     -1px 0 1px #000,
     0 -1px 1px #000;
 }
+.header__left
+{
+    display:flex;
+    gap:50px;
+    align-items:center;
+}
 .header__auth
 {
     display:flex;
     margin-left: auto;
-    gap:100px;
+    gap:50px;
     align-items:center;
+}
+.form__wrapper
+{
+    margin: auto;
+    width: 30%;
+    border: 3px solid red;
+    border-radius: 10px;
+    padding: 10px;
+}
+input[type=text], input[type=password] {
+    width: 95%;
+    padding: 12px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 2px solid red;
+    border-radius: 4px;
+}
+button
+{
+    background-color:  #f24444;
+    color: white;
+    padding: 10px 20px;
+    text-shadow: 1px 0 1px #000,
+    0 1px 1px #000,
+    -1px 0 1px #000,
+    0 -1px 1px #000;
+    border: none;
+    width: 100%;
+}
+button:hover
+{
+    text-decoration: none;
+    color:red !important;
+    transition: all 0.5s;
+}
+.centered__text
+{
+text-align: center;
+}
+.error__list
+{
+    list-style-type: none;
 }
 a:link { text-decoration: none; }
 a:visited { text-decoration: none; }
@@ -47,3 +95,4 @@ a:hover
     transition: all 0.5s;
 }
 a:active { text-decoration: none; }
+
