--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,16 @@
 .header__wrapper
 {
-    width:1600px;
+    width:1800px;
     margin:auto;
 }
 html
 {
-    font-family: 'Roboto', sans-serif !important;
-    font-size: 16px !important;
-
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 }
 .header
 {
     background: #f24444;
-}
-.header:active
-{
-    background-size: contain;
 }
 .header__content
 {
@@ -95,4 +90,7 @@ a:hover
     transition: all 0.5s;
 }
 a:active { text-decoration: none; }
-
+body
+{
+    margin: 0;
+}
