--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 .header__wrapper
 {
-    width:1800px;
+    width:1400px;
+    margin:auto;
+}
+.content__wrapper
+{
+    width:1000px;
     margin:auto;
 }
 html
@@ -55,7 +60,7 @@ input[type=text], input[type=password] {
     border: 2px solid red;
     border-radius: 4px;
 }
-button
+.button
 {
     background-color:  #f24444;
     color: white;
@@ -65,12 +70,21 @@ button
     -1px 0 1px #000,
     0 -1px 1px #000;
     border: none;
+    border-radius: 4px;
+}
+.table
+{
+    margin-top: 30px;
+ width: 100%;
+}
+.width100
+{
     width: 100%;
 }
 button:hover
 {
     text-decoration: none;
-    color:red !important;
+    color:red;
     transition: all 0.5s;
 }
 .centered__text
