--- a/public/css/style.css
+++ b/public/css/style.css
@@ -87,6 +87,7 @@ html
     0 -1px 1px #000;
     border: none;
     border-radius: 4px;
+
 }
 .table
 {
@@ -123,4 +124,8 @@ a:active { text-decoration: none; }
 body
 {
     margin: 0;
+}
+td
+{
+    text-align: center;
 }
