--- a/public/css/style.css
+++ b/public/css/style.css
@@ -128,9 +128,23 @@ td,th{
 button:hover
 {
     text-decoration: none;
-    color:red;
+    color: #f24444;
     transition: all 0.5s;
 }
+.button__green
+{
+    background-color: limegreen;
+}
+.button__blue
+{
+    background-color: #2b57d2;
+}
+.button__red
+{
+    background-color: #de0404;
+}
+
+
 .centered__text
 {
 text-align: center;
@@ -144,7 +158,7 @@ a:visited { text-decoration: none; }
 a:hover
 {
     text-decoration: none;
-    color:red !important;
+    color:red;
     transition: all 0.5s;
 }
 a:active { text-decoration: none; }
@@ -155,4 +169,10 @@ body
 td
 {
     text-align: center;
+}
+.status__inProgress {
+    background-color: #fffe19;
+}
+.status__complete{
+    background-color: limegreen;
 }
