--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,38 +10,51 @@ body{
     box-sizing: border-box;
 }
 .task__content {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    gap: 30px;
-    overflow-wrap: break-word;
-    text-overflow: ellipsis;
-  }
-  
-  .task__buttons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .tasks {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    font-size:16px;
-  }
-  
-  .task {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 1000px;
-    padding: 10px;
-    border: 1px solid red;
-    border-radius: 10px;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  gap: 30px;
+  overflow-wrap: break-word;
+  text-overflow: ellipsis;
+ }
+ 
+ .task__buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ }
+ 
+ .tasks {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  font-size:16px;
+ }
+ 
+ .task {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1000px;
+  padding: 10px;
+  border: 1px solid red;
+  border-radius: 10px;
+ }
+.groups{
+  display:flex;
+  flex-direction: column;
+}
+.group{
+  display:flex;
+  align-items: center;
+}
+.group__content{
+  display:flex;
+  align-items: center;
+  gap:10px;
+}
