--- a/client/src/components/UI/Header/header.css
+++ b/client/src/components/UI/Header/header.css
@@ -4,7 +4,8 @@ ul, li {
     padding:0;
 }
 header{
-    background:rgba(255, 0, 0, 0.699);
+    background: rgb(153,0,255);
+background: linear-gradient(144deg, rgba(153,0,255,1) 0%, rgba(253,29,29,1) 49%, rgba(252,176,69,1) 100%);
     
 }
 .header__wrapper{
