--- a/client/src/components/UI/Modal/myModal.module.css
+++ b/client/src/components/UI/Modal/myModal.module.css
@@ -6,6 +6,7 @@
     left: 0;
     display:none;
     background: rgba(0, 0, 0, 0.5);
+
 }
 
 .myModalContent {
@@ -13,9 +14,32 @@
     background: white;
     min-width: 250px;
     height:100%;
+    animation: active 0.3s ease-in-out forwards;
 }
 .myModal.active {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+
+}
+.myModal.inactive{
+    animation: inactive 0.3;
+}
+
+@keyframes inactive{
+    from {
+        transform: translateX(0)
+    }
+    to {
+        transform: translateX(-100%)
+    }
+}
+
+@keyframes active {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
 }
