--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,9 @@
     font-family: 'Roboto', sans-serif;
 }
 .wrapper{
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 20px
 }
 body{
     margin: 0;
